--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kira-app",
-  "version": "1.0.0",
-  "description": "Kira — Assistente vocale con Rich UI",
+  "version": "1.1.0",
+  "description": "Kira — Assistente vocale con Rich UI e Database",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,6 +9,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-edge-tts": "^1.0.4"
+    "better-sqlite3": "^9.0.0"
   }
 }
