--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "better-sqlite3": "^9.0.0"
+    "@google/generative-ai": "^0.24.1",
+    "express": "^4.18.2"
   }
 }
